@@ -29,7 +29,7 @@ Chronological list of authors
   - Jan Domanski
 2011
   - Benjamin Hall
-
+  - Paul Rigor
 
 External code
 -------------
